                                - changed some log messages level: just for debugging
13/03/2014 - 2.20 - Fenix       - updated sql queries not to bother ourselves with character espacing
18/03/2014 - 2.21 - Fenix       - automatically create necessary database tables
                                - added backward compatibility: support b3 version < 1.10dev
24/03/2014 - 2.22 - Fenix       - changed back SQL queries to use % notation for string substitution
06/05/2014 - 2.23 - Fenix       - rewrite dictionary creation as literals
                                - fixed local version of getMapsSoundingLike() not working properly
                                - redid object methods override : using a less brutal approach
                                - added dedicated jumprun code: following a more OOP approach
                                - added sqlite compatibility
                                - added automated tests
                                - minor syntax changes
08/06/2014 - 2.24 - Fenix       - fixed standard map cycle not working for maps having uppercase chars in their name
                                - changed some in-game message patterns
14/06/2014 - 2.25 - Fenix       - add support for command alias overwrite
12/09/2014 - 2.26 - Fenix       - reformat changelog
                                - make use of EVT_GAME_MAP_CHANGE instead of EVT_GAME_ROUND_START
                                - added a function which welcomes players on the new level showing information retrieved
                                  from the api (when available)
26/03/2015 - 2.27 - Fenix       - changes for first built-in release
                                - added soft dependency with urtserversidedemo plugin
                                - let the plugin listen to EVT_PLUGIN_ENABLED and EVT_PLUGIN_DISABLED
                                - replaced urllib2 with requests module
                                - removed 'jmp' prefix from commands