@@ -47,8 +47,3 @@ mapinfo: guest
 record: guest
 setway: senioradmin
 topruns: guest
-# the following commands will override the same ones provided by the admin plugin
-# and the poweradminurt plugin: command level/name/alias will be overridden by this plugin
-map: fulladmin
-maps: user
-setnextmap: admin
